started working on js. complted figurig out moves and setting up render

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Checkers</h1>
     <h2>Whose turn is it</h2>
     <section>
+        <img src="" alt="" class="0">
         <img src="" alt="" class="1">
         <img src="" alt="" class="2">
         <img src="" alt="" class="3">
@@ -74,9 +75,8 @@
         <img src="" alt="" class="61">
         <img src="" alt="" class="62">
         <img src="" alt="" class="63">
-        <img src="" alt="" class="64">
     </section>
-    <h3>Dispaly Messages</h3>
+    <h3>Display Messages</h3>
     <button>ReStart</button>
     <script defer src="js/script.js"></script>
 </body>
