added stalemate scenario. also highlights time for whose turn it is

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Checkers</h1>
-    <h2>Whose turn is it</h2>
+    <!-- <h2>Whose turn is it</h2> -->
     <div class="container">
         <section>
             <img src="" alt="" class="0">
@@ -80,14 +80,13 @@
         <div class="buttonandtimer">
             <button>Start New Game</button>
             <div>
-                <img src="" alt="" class="redpiece">
-                <h3>timer</h3>
+                <img src="images/Red.png" alt="" class="redpiece">
+                <h3 class="redtimer"></h3>
             </div>
             <div>
-                <img src="" alt="" class="blackpiece">
-                <h3>timer</h3>
+                <img src="images/Black.png" alt="" class="blackpiece">
+                <h3 class="blacktimer"></h3>
             </div>
-           
         </div>
     </div>
     <script defer src="js/script.js"></script>
